--- a/package.json
+++ b/package.json
@@ -12,28 +12,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/babel-plugin": "^11.11.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
     "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.33.0",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "webpack-dev-server": "^4.15.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^7.3.3",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
