--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@emotion/babel-plugin": "^11.11.0",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
-    "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.33.0",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
@@ -30,9 +30,11 @@
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "eslint": "^8.46.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.3",
+    "prettier": "^2.8.8",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
