--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-react": "^7.33.0",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
