--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "cors": "^2.8.5",
     "eslint-plugin-react": "^7.33.0",
     "express": "^4.18.2",
