--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,29 @@
 {
-    "root": true,
-    "ignorePatterns": ["**/test", "**/__tests__"],
-    "env": {
-      "node": true,
-      "browser": true,
-      "es2021": true
-    },
-    "plugins": ["react"],
-    "extends": ["eslint:recommended", "plugin:react/recommended"],
-    "parserOptions": {
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "rules": {
-      "indent": ["warn", 2],
-      "no-unused-vars": ["off", { "vars": "locals" }],
-      "prefer-const": "warn",
-      "quotes": ["warn", "single"],
-      "react/prop-types": "off",
-      "semi": ["warn", "always"],
-      "space-infix-ops": "warn"
-    },
-    "settings": {
-      "react": { "version": "detect" }
+  "root": true,
+  "ignorePatterns": ["**/test", "**/__tests__"],
+  "env": {
+    "node": true,
+    "browser": true,
+    "es2021": true
+  },
+  "plugins": ["react", "html"],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
     }
+  },
+  "rules": {
+    "indent": ["warn", 2],
+    "no-unused-vars": ["off", { "vars": "locals" }],
+    "prefer-const": "warn",
+    "quotes": ["warn", "single"],
+    "react/prop-types": "off",
+    "semi": ["warn", "always"],
+    "space-infix-ops": "warn"
+  },
+  "settings": {
+    "react": { "version": "detect" }
+  }
 }
