--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.46.0",
+    "eslint-plugin-html": "^7.1.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.3",
