--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@emotion/babel-plugin": "^11.11.0",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "eslint-plugin-react": "^7.33.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
@@ -40,7 +43,6 @@
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.3",
-    "prettier": "^2.8.8",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
