--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/babel-plugin": "^11.11.0",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "cookie-parser": "^1.4.6",
@@ -22,6 +23,7 @@
     "dotenv": "^16.3.1",
     "eslint-plugin-react": "^7.33.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
