merges dev with Minh/VideoController

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/babel-plugin": "^11.11.0",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "cookie-parser": "^1.4.6",
